--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-./.jsongenerator
-./aff_z
-./hc_print_numbers
-./hc_swap
-./aff_first_param
-./hc_strrev
+.jsongenerator
+aff_z
+hc_print_numbers
+hc_swap
+aff_first_param
+hc_strrev
